--- a/firmware/app/CMakeLists.txt
+++ b/firmware/app/CMakeLists.txt
@@ -5,4 +5,7 @@ project(nrf_coap_sensor_gateway)
 
 target_include_directories(app PRIVATE include)
 
-target_sources(app PRIVATE src/main.c)
+target_sources(app PRIVATE
+  src/main.c
+  src/sensor.c
+)
