build(firmware): add new sources and Kconfig options

--- a/firmware/app/prj.conf
+++ b/firmware/app/prj.conf
@@ -1,1 +1,38 @@
 CONFIG_LOG=y
+
+# Modem
+CONFIG_NRF_MODEM_LIB=y
+CONFIG_LTE_LINK_CONTROL=y
+
+# Temporary to generate random sensor values
+CONFIG_ENTROPY_GENERATOR=y
+
+# To print floating point 
+CONFIG_CBPRINTF_FP_SUPPORT=y
+
+# Networking
+CONFIG_NETWORKING=y
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_OFFLOAD=y
+CONFIG_POSIX_API=y
+
+# Networking extras required by libcoap
+CONFIG_NET_LOG=y
+CONFIG_NET_NATIVE=y
+CONFIG_NET_UDP=y
+CONFIG_NET_TCP=y
+CONFIG_NET_IPV4=y
+CONFIG_NET_IPV6=y
+CONFIG_XOPEN_STREAMS=y
+CONFIG_DNS_RESOLVER=y
+
+# libcoap3
+CONFIG_LIBCOAP=y
+CONFIG_MBEDTLS=n
+
+# Memory
+# libcoap allocates heap internally
+CONFIG_HEAP_MEM_POOL_SIZE=131072
+CONFIG_MAIN_STACK_SIZE=8192
+
+CONFIG_EVENTS=y
