chore(firmware): add libcoap3 zephyr module in west manifest

--- a/west.yml
+++ b/west.yml
@@ -10,5 +10,10 @@ manifest:
       revision: v3.2.2
       import: true
 
+    - name: libcoap
+      url: https://github.com/obgm/libcoap
+      revision: develop
+      path: modules/libcoap
+
   self:
     path: nrf-lte-coap-gateway
